--- a/.github/workflows/add-something.yaml
+++ b/.github/workflows/add-something.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
       - name: Create csv
-        run: Rscript -e "write.csv(iris, 'iris.csv')"
+        run: Rscript -e "write.csv(iris, 'iris2.csv')"
       - name: Commit results
         run: |
           git add iris.csv
