--- a/.github/workflows/add-something.yaml
+++ b/.github/workflows/add-something.yaml
@@ -1,4 +1,6 @@
-on: [push, pull_request]
+on:
+ push:
+   branches: master
 
 name: Add a file
 
@@ -10,9 +12,9 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
       - name: Create csv
-        run: Rscript -e "write.csv(iris, 'iris2.csv')"
+        run: Rscript -e "write.csv(iris, 'iris.csv')"
       - name: Commit results
         run: |
-          git add iris2.csv
+          git add iris.csv
           git commit -m 'add csv'
           git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:master
