--- a/.github/workflows/add-something.yaml
+++ b/.github/workflows/add-something.yaml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
       - name: Create csv
-        run: Rscript -e "write.csv(iris, 'iris2.csv')"
+        run: Rscript -e "write.csv(head(iris), 'iris3.csv')"
       - name: Commit results
         run: |
-          git add iris2.csv
+          git add iris3.csv
           git commit -m 'add csv'
           git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
