--- a/.github/workflows/check-something.yaml
+++ b/.github/workflows/check-something.yaml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
       - name: Create csv
-        run: Rscript -e "write.csv(iris, 'iris2.csv')"
+        run: Rscript -e "write.csv(head(iris), 'iris2.csv')"
